# T1E

./: README.md  T1E.ino  example_wifi_credentials.h
firmware/: example_wifi_credentials.h
firmware/V1.1/: T1E.ino  T1E_Battery_C3.ino
firmware/V2a/: partitions.csv  platformio.ini  sdkconfig.defaults
firmware/V2a/main/: CMakeLists.txt  main.bak.c  main.c
firmware/V2a/main/app/: state.c  state.h
firmware/V2a/main/app/modes/: mode_art.c  mode_art.h  mode_clock.c  mode_clock.h  mode_common.h  mode_dice.c  mode_dice.h  mode_life.c  mode_life.h  mode_life_clock.c  mode_life_clock.h  mode_pomo.c  mode_pomo.h  mode_settings.c  mode_settings.h
firmware/V2a/main/assets/fonts/: LoveloBlack14pt.h  LoveloBlack28pt.h  LoveloBlack9pt.h
firmware/V2a/main/drivers/epd/: epd.h  epd_gfx.c  epd_gfx.h  epd_ssd1681.c
firmware/V2a/main/drivers/rtc/: rtc_ds3231.c  rtc_ds3231.h
firmware/V2a/main/hal/: hal.h  hal_buttons.c  hal_pins.h  hal_power.c  hal_sleep.c
firmware/src/: .example.wifi_credentials.h  T1E.ino
hardware/: BOM_T1-PCB_2025-09-27.csv  PCB_T1-DS3231_Module_2025-09-27.json
mechanical/: Case-Bottom-M2.stl  Case-M2.stl  Case-Top-M2.stl
