idf_component_register(
    SRCS
        "main.c"
        "hal/hal_sleep.c"
        "hal/hal_buttons.c"
        "hal/hal_power.c"
        "drivers/epd/epd_ssd1681.c"
        "drivers/epd/epd_gfx.c"
        "drivers/rtc/rtc_ds3231.c"
        "app/state.c"
        "app/modes/mode_clock.c"
        "app/modes/mode_life_clock.c"
        "app/modes/mode_dice.c"
        "app/modes/mode_art.c"
        "app/modes/mode_pomo.c"
        "app/modes/mode_life.c"
        "app/modes/mode_settings.c"
    INCLUDE_DIRS
        "."
        "hal"
        "drivers/epd"
        "drivers/rtc"
        "app"
        "app/modes"
        "assets/fonts"
    REQUIRES
        driver
        esp_adc
        esp_driver_gpio
        esp_driver_i2c
        esp_driver_spi
        esp_hw_support
)
